# RT_Academy

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  app.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
docs/: DEVELOPMENT.md  DOCUMENTATION_STANDARDS.md
src/: __init__.py
src/UI_components/Applied/: questionnaire.py  questionnaire.py.isorted
src/UI_components/Basic/: __init__.py  charts.py  display.py  input.py  layout.py  status.py
src/assessments/: __init__.py  financiele_apk.py
src/calculators/: __init__.py  compound_interest.py  debt_payoff.py  financial_overview.py
src/code/UI_components/Applied/: questionnaire.py
src/code/UI_components/Basic/: charts.py  status.py
src/code/calculators/: financial_overview.py
src/data/: __init__.py  doel_suggesties.py
src/database/: __init__.py  crud.py  models.py
src/utils/: __init__.py  models.py  questionnaire.py
