[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "rt-academy"
version = "0.1.0"
description = "Financial planning tools built with Streamlit"
authors = ["RT Academy <contact@rtacademy.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
streamlit = ">=1.24.0"
plotly = ">=5.13.0"
numpy = ">=1.24.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.0.0"
isort = ">=5.12.0"
mypy = ">=1.4.0"
pydocstyle = ">=6.3.0"
pylint = ">=3.0.0"
pre-commit = ">=3.0.0"

[tool.pydocstyle]
convention = "numpy"
add-select = ["D404", "D415", "D417"]
match = ".*\\.py"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["streamlit.*", "plotly.*", "numpy.*"]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = ["C0111", "E0401"]  # missing-docstring handled by pydocstyle, ignore import-error

[tool.pylint.format]
max-line-length = 88

[tool.black]
line-length = 88
target-version = ['py313']
include = '\\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
